@@ -1,3 +1,12 @@
+2006-12-16  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* src/backend/bacon-video-widget-gst-0.10.c:
+	(bacon_video_widget_open_with_subtitle),
+	(bacon_video_widget_is_seekable):
+	  Use SEEKING query to query seekability instead of second-guessing
+	  based on whether we have a duration or not (Closes: #365414).
+	  Needs decoder/demuxer support.
+
 2006-12-14  Bastien Nocera  <hadess@hadess.net>
 
 	* src/ev-sidebar.h: Fix typo, thanks uws
